--- a/src/i18n/languages/en_US.json
+++ b/src/i18n/languages/en_US.json
@@ -12,6 +12,9 @@
   "module.checkout.form.upload.image": "Upload Images (Max: 4)",
   "module.checkout.form.choose.image": "Choose up to 4 images",
   "module.checkout.form.select.theme": "Select a Theme",
+  "module.checkout.form.placeholder.email": "email@example.com",
+  "module.checkout.form.placeholder.age": "Enter age",
+  "module.checkout.form.placeholder.message": "Write a special message",
   "module.checkout.form.checkout.button": "Checkout",
   "module.checkout.preview.title": "Preview",
   "module.checkout.preview.dear": "Dear",
