--- a/src/i18n/languages/pt_BR.json
+++ b/src/i18n/languages/pt_BR.json
@@ -12,6 +12,9 @@
   "module.checkout.form.upload.image": "Enviar imagens (Máx: 4)",
   "module.checkout.form.choose.image": "Escolha até 4 imagens",
   "module.checkout.form.select.theme": "Selecione um tema",
+  "module.checkout.form.placeholder.email": "email@exemplo.com",
+  "module.checkout.form.placeholder.age": "Digite a idade",
+  "module.checkout.form.placeholder.message": "Escreva uma mensagem especial",  
   "module.checkout.form.checkout.button": "Finalizar compra",
   "module.checkout.preview.title": "Preview",
   "module.checkout.preview.dear": "",
