feat: :sparkles: add i18n into toasts

--- a/src/i18n/languages/en_US.json
+++ b/src/i18n/languages/en_US.json
@@ -7,8 +7,8 @@
   "module.checkout.form.valid.email": "Please enter a valid email address.",
   "module.checkout.form.message": "Personalized Message (Optional)",
   "module.checkout.form.select.plan": "Select a Plan",
-  "module.checkout.form.select.plan.basic": "Basic",
-  "module.checkout.form.select.plan.premium": "Premium",
+  "module.checkout.form.select.plan.basic": "Basic - $4.89",
+  "module.checkout.form.select.plan.premium": "Premium - $6.89",
   "module.checkout.form.upload.image": "Upload Images (Max: 4)",
   "module.checkout.form.choose.image": "Choose up to 4 images",
   "module.checkout.form.select.theme": "Select a Theme",
@@ -21,6 +21,14 @@
   "module.checkout.preview.loading.theme": "Loading your birthday template...",
   "module.checkout.preview.no.theme.selected": "No theme selected yet",
   "module.checkout.preview.instructions": "Choose a birthday template to preview it here 🎉",
+  "module.checkout.toast.name.required": "Please add a name.",
+  "module.checkout.toast.email.required": "Please add an email.",
+  "module.checkout.toast.email.invalid": "Please enter a valid email address.",
+  "module.checkout.toast.plan.required": "Please select a plan.",
+  "module.checkout.toast.theme.required": "Please select a theme.",
+  "module.checkout.toast.order.failed": "Failed to create order.",
+  "module.checkout.toast.generic.error": "Something went wrong. Please try again.",
+  "module.checkout.toast.success": "Order created successfully!",
 
   "shared.component.footer.rights": "HappyBirthday. All rights reserved.",
   "shared.component.footer.terms": "Terms of Service",
