--- a/src/i18n/languages/pt_BR.json
+++ b/src/i18n/languages/pt_BR.json
@@ -7,8 +7,8 @@
   "module.checkout.form.valid.email": "Por favor, insira um endereço de e-mail válido.",
   "module.checkout.form.message": "Mensagem personalizada (opcional)",
   "module.checkout.form.select.plan": "Selecione um plano",
-  "module.checkout.form.select.plan.basic": "Básico",
-  "module.checkout.form.select.plan.premium": "Premium",
+  "module.checkout.form.select.plan.basic": "Básico - 15,90",
+  "module.checkout.form.select.plan.premium": "Premium - 26,90",
   "module.checkout.form.upload.image": "Enviar imagens (Máx: 4)",
   "module.checkout.form.choose.image": "Escolha até 4 imagens",
   "module.checkout.form.select.theme": "Selecione um tema",
@@ -21,6 +21,14 @@
   "module.checkout.preview.loading.theme": "Carregando seu modelo...",
   "module.checkout.preview.no.theme.selected": "Nenhum tema selecionado",
   "module.checkout.preview.instructions": "Escolha um modelo para visualizar aqui 🎉",
+  "module.checkout.toast.name.required": "Por favor, insira um nome.",
+  "module.checkout.toast.email.required": "Por favor, insira um e-mail.",
+  "module.checkout.toast.email.invalid": "Insira um endereço de e-mail válido.",
+  "module.checkout.toast.plan.required": "Selecione um plano.",
+  "module.checkout.toast.theme.required": "Selecione um tema.",
+  "module.checkout.toast.order.failed": "Falha ao criar o pedido.",
+  "module.checkout.toast.generic.error": "Algo deu errado. Tente novamente.",
+  "module.checkout.toast.success": "Pedido criado com sucesso!",
 
   "shared.component.footer.rights": "HappyBirthday. Todos os Direitos Reservados.",
   "shared.component.footer.terms": "Termos de Serviço",
