--- a/src/i18n/languages/en_US.json
+++ b/src/i18n/languages/en_US.json
@@ -1,5 +1,5 @@
 {
-  "module.checkout.form.title": "Complete Your Purchase",
+  "module.checkout.form.title": "Purchase Informations",
   "module.checkout.form.name": "Recipient Name",
   "module.checkout.form.name.characters.limit": "You've reached the 50-character limit.",
   "module.checkout.form.age": "Recipient Age",
@@ -12,7 +12,7 @@
   "module.checkout.form.upload.image": "Upload Images (Max: 4)",
   "module.checkout.form.choose.image": "Choose up to 4 images",
   "module.checkout.form.select.theme": "Select a Theme",
-  "module.checkout.form.placeholder.email": "email@example.com",
+  "module.checkout.form.placeholder.email": "Valid email",
   "module.checkout.form.placeholder.age": "Enter age",
   "module.checkout.form.placeholder.message": "Write a special message",
   "module.checkout.form.checkout.button": "Checkout",
